--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Poppins';
     src: url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 200;
     font-style: normal;
 }
 
