--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import './styles/fonts.css';
-@import '@icon/themify-icons/themify-icons.css';
+/* @import '@icon/themify-icons/themify-icons.css'; */
 
 @tailwind base;
 @tailwind components;
