--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -67,7 +67,7 @@
     font-weight: normal;
     font-style: normal;
 }
-
+/* 
 @font-face {
     font-family: 'themify';
     src: url('../assets/fonts/Themify-Regular.ttf') format('truetype');
@@ -75,3 +75,4 @@
     font-style: normal;
 }
 
+ */
